# flasktrack

./: .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml  requirements-dev-in.txt  requirements-in.txt
.github/workflows/: ci.yml  style.yml
demo/: README.md  app.py  justfile  requirements-in.txt
demo/app/: config.py
demo/app/controllers/: auth.py  errors.py  main.py
demo/app/models/: user.py
demo/app/views/auth/: login.html  register.html
demo/app/views/errors/: 404.html  500.html
demo/app/views/layouts/: base.html
demo/app/views/main/: dashboard.html  index.html
flasktrack/: README.md  justfile  requirements-dev-in.txt  run.py
flasktrack/app/: __init__.py  config.py
flasktrack/app/controllers/: auth.py  main.py
flasktrack/app/forms/: __init__.py  auth.py
flasktrack/app/static/js/: main.js
flasktrack/app/views/layouts/: base.html
flasktrack/app/views/main/: index.html
haptik/: README.md  justfile  run.py
haptik/app/: config.py
haptik/app/models/: __init__.py  user.py
haptik/app/static/css/: style.css
haptik/app/views/layouts/: base.html
haptik/app/views/main/: index.html
haptik/migrations/versions/: c4e1e80e2f66_initial_migration.py
haptik/tests/: conftest.py
src/flasktrack/: __init__.py  __main__.py  cli.py  scaffold.py  tracker.py  utils.py
src/flasktrack/templates/flask-app/: cookiecutter.json
src/flasktrack/templates/flask-app/{{cookiecutter.project_slug}}/: .env  .env.example  .gitignore  README.md  app.py  justfile  pyproject.toml  requirements-dev.txt  requirements-in.txt  requirements.txt  run.py
src/flasktrack/templates/flask-app/{{cookiecutter.project_slug}}/app/: __init__.py  config.py  decorators.py
src/flasktrack/templates/flask-app/{{cookiecutter.project_slug}}/app/admin/: __init__.py  forms.py  registry.py
src/flasktrack/templates/flask-app/{{cookiecutter.project_slug}}/app/controllers/: admin.py  auth.py  errors.py  main.py
src/flasktrack/templates/flask-app/{{cookiecutter.project_slug}}/app/forms/: auth.py
src/flasktrack/templates/flask-app/{{cookiecutter.project_slug}}/app/models/: __init__.py  user.py
src/flasktrack/templates/flask-app/{{cookiecutter.project_slug}}/app/static/css/: README.md  style.css
src/flasktrack/templates/flask-app/{{cookiecutter.project_slug}}/app/views/admin/: base.html  dashboard.html  model_form.html  model_list.html
src/flasktrack/templates/flask-app/{{cookiecutter.project_slug}}/app/views/auth/: login.html  magic_link.html  register.html
src/flasktrack/templates/flask-app/{{cookiecutter.project_slug}}/app/views/errors/: 404.html  500.html
src/flasktrack/templates/flask-app/{{cookiecutter.project_slug}}/app/views/layouts/: base.html
src/flasktrack/templates/flask-app/{{cookiecutter.project_slug}}/app/views/main/: dashboard.html  index.html
src/flasktrack/templates/flask-app/{{cookiecutter.project_slug}}/migrations/: add_magic_link_fields.py
src/flasktrack/templates/flask-app/{{cookiecutter.project_slug}}/tests/: conftest.py  test_admin.py  test_admin_functionality.py  test_auth.py
src/flasktrack/templates/scaffold/: _form.html.jinja2  controller.py.jinja2  edit.html.jinja2  form.py.jinja2  index.html.jinja2  (+3 more)
tests/: __init__.py  conftest.py  test_add_admin_command.py  test_add_user_command.py  test_admin_with_scaffold.py  test_cli.py  test_init_command.py  test_scaffold_command.py  test_scaffold_integration.py  test_scaffold_syntax.py  test_tracker.py  test_utils.py
